--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>finalapplication</name>
+	<name>bonitos2</name>
 	<comment>7.15.0</comment>
 	<projects>
 	</projects>
