--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.company</groupId>
   <artifactId>finalapplication</artifactId>
   <version>1.0</version>
-  <name>finalapplication</name>
+  <name>bonitos2</name>
   <properties>
     <bonita.runtime.version>7.15.0</bonita.runtime.version>
     <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
